# developer_diary_day1

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  package.json  tsconfig.json
test/server/: BUILD.bazel
test/server/src/calculator/: calculator.spec.ts
tools/: bazel_stamp_vars.sh
tools/common/: devmode_js_sources.bzl  sources_aspect.bzl
tools/mocha/: BUILD.bazel  mocha_node_test.bzl  mocha_runner.js
